# clayj

./: .gitignore  README.md  TODO.md  inc.txt  mat.txt  pom.xml  ray.txt  raymath.txt
clay/: README.txt
clayj-api/: pom.xml
clayj-api/src/main/java/dmacd/clay/: Clay.java  TrackedArena.java
clayj-api/src/main/java/dmacd/clay/renderer/: CustomLayoutElement.java  CustomLayoutElement_3DModel.java  (+1 more)
clayj-raylib-examples/: pom.xml
jextract/: clay1.bat  raylib.bat  raylib_render_custom.bat
lib/: .gitignore  CMakeLists.txt  GET_CLAY_HERE.txt  README.md  clay.c  demo.h  main.c  raylib_render_custom.h  raymath_for_jextract.h
lib/shared-layouts/: clay-video-demo.c
src/main/java/dmacd/: Main.java
src/main/java/dmacd/clay/: Clay.java  Demo.java  Main.java  TrackedArena.java
src/main/java/dmacd/clay/demo/: ClayVideoDemo_Arena.java  ClayVideoDemo_Data.java  DemoFFM.java  Document.java  DocumentArray.java  SidebarClickData.java
src/main/java/dmacd/clay/renderer/: CustomLayoutElement_3DModel.java  RaylibRenderer.java
src/main/java/dmacd/ffm/: Lookup.java  Struct.java
src/main/java/dmacd/ffm/clay/: ClayFFM.java  Clay_AspectRatioElementConfig.java  Clay_BorderElementConfig.java  Clay_ChildAlignment.java  Clay_ClipElementConfig.java  Clay_Dimensions.java  Clay_ErrorData.java  Clay_ErrorHandler.java  Clay_FloatingElementConfig.java  Clay_ImageRenderData.java  Clay_LayoutConfig.java  Clay_Padding.java  Clay_RenderCommand.java  Clay_ScrollRenderData.java  Clay_SetMeasureTextFunction$measureTextFunction.java  Clay_SizingMinMax.java  Clay_StringSlice.java
src/main/java/dmacd/ffm/raylib/: BoundingBox.java  Camera.java  Camera2D.java  Camera3D.java  Color.java  Font.java  GlyphInfo.java  Image.java  Matrix.java  Quaternion.java  Ray.java  RayFFM.java  Raylib.java  Rayliib.java  Rectangle.java  Texture.java  Texture2D.java  Vector2.java  Vector3.java  Vector4.java
(+37 files in other folders)
